# mini-basic

./: Cargo.toml  README.md
data/: sieve.bas  test.bas
data/NBS/: README
src/: ast.rs  basic.pest  interpret.rs  lib.rs  parser.rs  pesthelpers.rs  vars.rs  vm.rs
