[package]
name = "mini-basic"
version = "0.1.0"
authors = ["Andy Philpotts <andy@failfree.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
regex = "1.0"
pest = "2.0"
pest_derive = "2.0"
walkdir = "2"
log = "0.4"
env_logger = "0.7"
itertools = "0.9"
thiserror = "1.0"
rand = "0.7"
lazy_static = "1.4"
anyhow = "1.0"


